fix: Right and left sidebar collapse toggles are the same on mobile

--- a/inst/components/sidebar.scss
+++ b/inst/components/sidebar.scss
@@ -181,7 +181,7 @@ $bslib-sidebar-border: var(--bs-card-border-width, #{$card-border-width}) solid 
       border-bottom-left-radius: inherit;
     }
 
-    > .collapse-toggle {
+    > .collapse-toggle, &.sidebar-right > .collapse-toggle {
       grid-row: 2 / 3;
       grid-column: 1 / 2;
       top: 0;
